syntax = "proto3";

option csharp_namespace = "Grpc_Service_Usage";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc CustomReply(requestModel) returns(responseModel);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message requestModel{
	
}

message responseModel{
	int32 MaxResult=1;
}